// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Paragraph component Aligned 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: right;
  color: #262D33;
}

<p
  className="c0"
>
  🥨 Yum yum!
</p>
`;

exports[`A Paragraph component resized 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 3.25rem;
  line-height: 3.75rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #262D33;
}

<p
  className="c0"
  size="d2"
>
  🥨
</p>
`;

exports[`A Paragraph component transformed 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: uppercase;
  text-align: left;
  color: #262D33;
}

<p
  className="c0"
>
  🥨 Yum yum!
</p>
`;

exports[`A Paragraph component with variant 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #CC1F36;
}

<p
  className="c0"
>
  🥨
</p>
`;

exports[`A Paragrapht component weight 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 700;
  text-transform: none;
  text-align: left;
  color: #262D33;
}

<p
  className="c0"
>
  🥨
</p>
`;

exports[`A Text component tuncated 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #262D33;
}

<p
  className="c0"
>
  🥨
</p>
`;

exports[`A default Paragraph component 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #262D33;
}

<p
  className="c0"
>
  🥨
</p>
`;
